[package]
name = "spendr"
version = "0.1.0"
authors = ["Dan Connolly <dckc@madmode.com>"]
edition = "2018"

[dependencies]
hyper = "0.12.33"
futures = "0.1.28"
tower-grpc = "0.1.0"
tower-hyper = "0.1.1"
tower-util = "0.1.0"
prost = "0.5.0"
bytes = "0.4.12"
env_logger = "0.6.2"
http = "0.1.18"
tower-request-modifier = "0.1.0"
tokio = "0.1.22"

[build-dependencies]
tower-grpc-build = "0.1.0"
